--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Shizuru&display=swap");
 fa-icon {
   font-size: 40px;
+  color: white;
 }
 a {
   cursor: pointer;
+  color: white;
 }
 #logo {
   font-family: "Shizuru", cursive;
@@ -11,5 +13,4 @@ a {
 }
 nav {
   width: 100vw;
-  background-color: rgb(236, 234, 234);
 }
