--- a/src/app/markets/markets.component.html
+++ b/src/app/markets/markets.component.html
@@ -66,7 +66,7 @@
               (click)="sortBy('circulating_supply')"
               *ngIf="sortCounter === 'e'"
             ></fa-icon>
-            Market Value
+            Circ. Supply
           </th>
         </tr>
       </thead>
