--- a/src/app/markets/markets.component.html
+++ b/src/app/markets/markets.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mt-4">
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">
