--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -105,9 +105,9 @@
   </div> -->
 </div>
 <br />
-<div class="container">
+<div class="container mt-2">
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>No.</th>
@@ -131,6 +131,7 @@
           <th>Profit/Loss($)</th>
           <th>Profit/Loss(%)</th>
           <th scope="col">Bougth Date</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
