--- a/src/app/markets/markets.component.html
+++ b/src/app/markets/markets.component.html
@@ -96,7 +96,7 @@
     </table>
     <div
       *ngIf="!this.incomingFilterWord"
-      class="input-group d-flex justify-content-center"
+      class="input-group d-flex justify-content-center mb-5"
     >
       <a *ngIf="currentPage != 0" (click)="pageDown()"
         >{{ currentPage }}&nbsp; &nbsp;<fa-icon [icon]="faChevronLeft"></fa-icon
