--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class="sticky-top">
-  <app-header *ngIf="user"></app-header>
-</div>
-<div style="position: relative">
-  <router-outlet></router-outlet>
-</div>
-<div>
-  <app-footer></app-footer>
+<div id="full-body">
+  <div class="sticky-top">
+    <app-header *ngIf="user"></app-header>
+  </div>
+  <div id="dynamic-body">
+    <router-outlet></router-outlet>
+  </div>
+  <div>
+    <app-footer></app-footer>
+  </div>
 </div>
