--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class="bg-primary text-white">
+<div class="text-white">
   <footer
-    class="d-flex flex-wrap justify-content-between align-items-center border-top mt-5 container"
+    class="d-flex flex-wrap justify-content-between align-items-center mt-5 container pt-4"
   >
     <div class="col-md-4 d-flex align-items-center">
       <a
@@ -14,7 +14,7 @@
       <span>&copy; 2021 CoinCake, Inc</span>
     </div>
 
-    <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+    <ul class="nav col-md-4 justify-content-center list-unstyled d-flex me-5">
       <li>
         <a class="text-muted"><fa-icon [icon]="faTwitter"></fa-icon> </a>
       </li>
@@ -26,14 +26,21 @@
       </li>
     </ul>
   </footer>
-  <div class="container pb-4">
+  <div class="container">
     <hr />
-    <small>e-mail: topaloglu08@gmail.com</small>
-    <br />
-    <small
-      ><a class="warn">Terms of Use</a>&nbsp;&nbsp;&nbsp;<a class="warn"
-        >Privacy Policy</a
-      >&nbsp;&nbsp;&nbsp;<a class="warn">Cookie Policy</a>
-    </small>
+  </div>
+  <div
+    class="d-flex justify-content-center align-items-center container pb-4 flex-column"
+  >
+    <div>
+      <small>e-mail: topaloglu08@gmail.com</small>
+    </div>
+    <div>
+      <small
+        ><a class="warn">Terms of Use</a>&nbsp;&nbsp;&nbsp;<a class="warn"
+          >Privacy Policy</a
+        >&nbsp;&nbsp;&nbsp;<a class="warn">Cookie Policy</a>
+      </small>
+    </div>
   </div>
 </div>
