--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -106,7 +106,7 @@
 </div>
 <br />
 <div class="container mt-2">
-  <div class="table-responsive">
+  <div class="table-responsive height">
     <table id="inventory-table" class="table table-hover">
       <thead>
         <tr>
