--- a/src/app/markets/markets.component.html
+++ b/src/app/markets/markets.component.html
@@ -97,7 +97,7 @@
   </div>
   <div
     *ngIf="!this.incomingFilterWord"
-    class="input-group d-flex justify-content-center mb-5"
+    class="input-group d-flex justify-content-center mb-5 text-white"
   >
     <a *ngIf="currentPage != 0" (click)="pageDown()"
       >{{ currentPage }}&nbsp; &nbsp;<fa-icon [icon]="faChevronLeft"></fa-icon
