--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -312,7 +312,7 @@
 
   <div
     *ngIf="usersData.length >= 1 && !incomingFilterWord"
-    class="input-group d-flex justify-content-center"
+    class="input-group d-flex justify-content-center text-white"
   >
     <a *ngIf="currentPage != 0" (click)="pageDown()"
       >{{ currentPage }}&nbsp; &nbsp;<fa-icon [icon]="faChevronLeft"></fa-icon
