css fixes and navbar dynamic background color depends on scrollY

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div id="dynamic-body">
     <router-outlet></router-outlet>
   </div>
-  <div>
+  <div style="margin: 0; padding: 0">
     <app-footer></app-footer>
   </div>
 </div>
