--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-expand-lg">
+<nav
+  [ngClass]="
+    isScroll ? 'navbar navbar-expand-lg sticky' : 'navbar navbar-expand-lg'
+  "
+>
   <div class="container-fluid">
     <a
       class="navbar-brand ms-4 d-flex align-items-center"
