--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
 #dynamic-body {
   position: relative;
   min-height: 500px;
+  margin: 0px;
+  padding: 0px;
 }
 #full-body {
+  margin: 0px;
+  padding: 0px;
   /* background: linear-gradient(to left top, #ffd89b, #19547b); */
   background: linear-gradient(to left top, #5b86e5, #36d1dc);
 }
