login page css fixes

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -5,10 +5,10 @@
         class="section d-flex justify-content-center flex-column align-items-center"
       >
         <!-- <img class="rounded" src="./../../assets/img/logo.jpg" alt="" /> -->
-        <div class="ms-4">
+        <div>
           <fa-icon id="logo" class="text-primary" [icon]="faChartPie"></fa-icon>
         </div>
-        <div class="ms-3">
+        <div>
           <p class="align-self-center" id="logotext" class="mb-5">COINCAKE</p>
         </div>
       </div>
