error handling initialize

--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -1,7 +1,12 @@
 <div class="container d-flex align-items-center justify-content-center">
   <div class="section">
-    <h5>
-      Wrong Url, redirecting to home page. Please wait...{{ displayTimer }}
+    <h5 *ngIf="marketsDataError == null">
+      Something Wrong, redirecting to home page. Please wait...{{
+        displayTimer
+      }}
+    </h5>
+    <h5 *ngIf="marketsDataError != null">
+      {{ marketsDataError }}-Please try to reload page again.
     </h5>
   </div>
 </div>
