--- a/src/app/users/edit-profile/edit-profile.component.html
+++ b/src/app/users/edit-profile/edit-profile.component.html
@@ -1,1 +1,15 @@
-<div class="container">Buraya Form Gelecek</div>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6 mt-4">
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input class="form-control" type="text" />
+        </div>
+        <br />
+        <br />
+        yapım aşamasında....
+      </form>
+    </div>
+  </div>
+</div>
