--- a/src/app/users/edit-profile/edit-profile.component.html
+++ b/src/app/users/edit-profile/edit-profile.component.html
@@ -1,14 +1,97 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-6 mt-4">
-      <form>
+      <form [formGroup]="userPersonalInfo" (submit)="onSubmit()">
+        <div class="form-group d-flex justify-content-center">
+          <div class="form-group d-flex justify-content-center">
+            <img
+              [src]="
+                imageSrc ||
+                'https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png'
+              "
+              alt="pp"
+              class="rounded-circle"
+            />
+            <a (click)="fileInput.click()"
+              ><fa-icon [icon]="faCamera"></fa-icon
+            ></a>
+          </div>
+        </div>
+        <div class="form-group">
+          <!-- <label for="file">Profile Picture</label> -->
+          <input
+            style="display: none"
+            class="form-control"
+            type="file"
+            (change)="readURL($event)"
+            accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*"
+            #fileInput
+          />
+        </div>
         <div class="form-group">
           <label for="name">Name</label>
-          <input class="form-control" type="text" />
+          <input
+            class="form-control"
+            type="text"
+            [formControlName]="'firstName'"
+          />
         </div>
-        <br />
-        <br />
-        yapım aşamasında....
+        <div class="form-group">
+          <label for="surname">Surname</label>
+          <input
+            class="form-control"
+            type="text"
+            [formControlName]="'surName'"
+          />
+        </div>
+        <div class="form-group">
+          <label for="birthdate">Birth Date</label>
+          <input
+            class="form-control"
+            type="date"
+            [formControlName]="'birthDate'"
+          />
+        </div>
+        <div class="form-group">
+          <label for="gender">Gender</label>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              name="gender"
+              value="male"
+              type="radio"
+              [formControlName]="'gender'"
+            />
+            <label class="form-check-label"> Male </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              name="gender"
+              type="radio"
+              value="female"
+              [formControlName]="'gender'"
+            />
+            <label class="form-check-label"> Female </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              name="gender"
+              type="radio"
+              value="dwtshare"
+              [formControlName]="'gender'"
+            />
+            <label class="form-check-label"> Don't want to share </label>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="surname">About Yourself</label>
+          <textarea class="form-control" [formControlName]="'about'"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary btn-sm float-end mt-3">
+          Save
+        </button>
       </form>
     </div>
   </div>
